--- a/etc/evergreen.yml
+++ b/etc/evergreen.yml
@@ -729,6 +729,62 @@ functions:
           kill_process "$process"
         done
 
+  "set up kitchen credentials":
+    command: shell.exec
+    params:
+      silent: true
+      script: |
+        set -o errexit
+
+        mkdir -p ~/.ssh ~/.aws
+        echo -n "${kitchen_private_key}" > ~/.ssh/kitchen.pem
+        chmod 0600 ~/.ssh/kitchen.pem
+
+        cat <<EOF > ~/.aws/config
+        [default]
+        region = us-east-1
+        EOF
+
+        cat <<EOF > ~/.aws/credentials
+        [default]
+        aws_access_key_id = ${kitchen_aws_key}
+        aws_secret_access_key = ${kitchen_aws_secret}
+        EOF
+
+  "run kitchen":
+    command: shell.exec
+    type: test
+    params:
+      shell: bash
+      working_dir: src/buildscripts/package_test
+      script: |
+        set -o errexit
+
+        export KITCHEN_ARTIFACTS_URL="https://s3.amazonaws.com/mciuploads/${project}/${build_variant}/${revision}/artifacts/${build_id}.tgz"
+        export KITCHEN_SECURITY_GROUP="${kitchen_security_group}"
+        export KITCHEN_SSH_KEY_ID="${kitchen_ssh_key_id}"
+        export KITCHEN_SUBNET="${kitchen_subnet}"
+
+        for i in {1..3}
+        do
+          if ! kitchen converge "${packager_distro}"; then
+            converged="false"
+            kitchen destroy "${packager_distro}" || true
+            sleep 30
+          else
+            break
+          fi
+        done
+
+        test "$converged" != "false"
+
+        if ! kitchen verify "${packager_distro}"; then
+          verified="false"
+        fi
+
+        kitchen destroy "${packager_distro}" || true
+        test "$verified" != "false"
+
 pre:
   - command: shell.track
   - func: "kill processes"
@@ -2642,6 +2698,14 @@ tasks:
       resmoke_args: --suites=views_rs --storageEngine=wiredTiger
       run_multiple_jobs: true
 
+- name: package
+  depends_on:
+  - name: compile
+  commands:
+    - func: "fetch artifacts"
+    - func: "set up kitchen credentials"
+    - func: "run kitchen"
+
 - name: push
   patchable: false
   depends_on:
@@ -3654,6 +3718,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: ubuntu1404
@@ -3782,6 +3849,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: ubuntu1604
@@ -3901,6 +3971,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: enterprise-ubuntu1604-arm64
@@ -4318,6 +4391,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: amazon
@@ -4440,6 +4516,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 ###########################################
@@ -5567,6 +5646,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: enterprise-rhel-62-64-bit-coverage
@@ -5840,6 +5922,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -5961,6 +6046,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: rhel70
@@ -6097,6 +6185,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: enterprise-rhel-71-ppc64le
@@ -6430,6 +6521,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -6494,6 +6588,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -6549,6 +6646,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -6625,6 +6725,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -6838,6 +6941,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -6892,6 +6998,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 - name: enterprise-suse11-s390x
@@ -7099,6 +7208,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -7250,6 +7362,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -7305,6 +7420,9 @@ buildvariants:
   - name: ssl
   - name: sslSpecial
   - name: unittests
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -7427,6 +7545,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
@@ -7549,6 +7670,9 @@ buildvariants:
   - name: views_WT
   - name: views_rs
   - name: views_rs_WT
+  - name: package
+    distros:
+    - ubuntu1604-packer
   - name: push
 
 
