--- a/etc/perf.yml
+++ b/etc/perf.yml
@@ -22,6 +22,13 @@ post:
           exit 0
     - command: shell.cleanup
 
+modules:
+- name: enterprise
+  repo: git@github.com:10gen/mongo-enterprise-modules.git
+  prefix: src/mongo/db/modules
+  branch: master
+
+
 functions:
   "download analysis scripts":
     - command: shell.exec
@@ -203,7 +210,7 @@ tasks:
       params:
         aws_key: ${aws_key}
         aws_secret: ${aws_secret}
-        local_file: src/mongo
+        local_file: src/build/opt/mongo/mongo
         remote_file: ${project}/${version_id}/${revision}/mongo-${version_id}
         bucket: mciuploads
         permissions: public-read
@@ -484,13 +491,15 @@ tasks:
 
 buildvariants:
 - name: linux-wt-standalone
-  display_name: Standalone Linux WT
+  display_name: Standalone Linux inMemory
   batchtime: 90 # 1.5 hours
+  modules:
+    - enterprise
   expansions:
-    compile_flags: &compile_flags -j$(grep -c ^processor /proc/cpuinfo) CC=/opt/mongodbtoolchain/bin/gcc CXX=/opt/mongodbtoolchain/bin/g++ --release
+    compile_flags: &compile_flags -j$(grep -c ^processor /proc/cpuinfo) CC=/opt/mongodbtoolchain/bin/gcc CXX=/opt/mongodbtoolchain/bin/g++ --release --ssl
     mongod_exec_wrapper: &exec_wrapper "numactl --physcpubind=4,5,6,7 -i 1"
     perf_exec_wrapper: &perf_wrapper "numactl --physcpubind=1,2,3 -i 0"
-    mongod_flags: "--storageEngine=wiredTiger --logpath ./mongod.log --fork --syncdelay 0 --nojournal --setParameter ttlMonitorEnabled=false --setParameter diagnosticDataCollectionEnabled=false  --wiredTigerCacheSizeGB 16"
+    mongod_flags: "--storageEngine=inMemory --logpath ./mongod.log --fork --syncdelay 0  --setParameter ttlMonitorEnabled=false --setParameter diagnosticDataCollectionEnabled=false  --wiredTigerCacheSizeGB 16"
     project: &project perf-3.2
   run_on:
   - "centos6-perf"
@@ -529,13 +538,13 @@ buildvariants:
   - name: singleThreaded
 
 - name: linux-wt-repl
-  display_name: 1-Node ReplSet Linux WT
+  display_name: 1-Node ReplSet Linux inMemory
   batchtime: 360 # 6 hours
   expansions:
     compile_flags: *compile_flags
     mongod_exec_wrapper: *exec_wrapper
     perf_exec_wrapper: *perf_wrapper
-    mongod_flags: "--replSet=test --storageEngine=wiredTiger --logpath ./mongod.log --fork --syncdelay 0 --nojournal --setParameter ttlMonitorEnabled=false --wiredTigerCacheSizeGB 16 --oplogSize 100000 --setParameter diagnosticDataCollectionEnabled=false "
+    mongod_flags: "--replSet=test --storageEngine=inMemory  --logpath ./mongod.log --fork --syncdelay 0 --setParameter ttlMonitorEnabled=false --wiredTigerCacheSizeGB 16 --oplogSize 100000 --setParameter diagnosticDataCollectionEnabled=false "
     project: *project
   run_on:
   - "centos6-perf"
@@ -563,7 +572,7 @@ buildvariants:
   - name: singleThreaded
 
 - name: linux-wt-repl-compare
-  display_name: 1-Node ReplSet Linux WT Comparison Standalone
+  display_name: 1-Node ReplSet Linux inMemory Comparison Standalone
   batchtime: 360 # 6 hours
   expansions:
     project: *project
